--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ navbar:
   title: "PM566 Project: Los Angeles Crime 2020-2021"
   type: inverse
   left:
-    - text: "Vizualizations"
+    - text: "Home"
       href: index.html
   right:
     - icon: fa-github fa-lg
@@ -13,7 +13,7 @@ navbar:
       href: https://github.com/mkhan58/pm566-finalproj
 output: 
   html_document:
-    theme: haddock
+    theme: cosmo
     include:
       after_body: footer.html
     css: styles.css 
