--- a/_site.yml
+++ b/_site.yml
@@ -1,11 +1,13 @@
 name: "my-website"
 output_dir: "."
 navbar:  
-  title: "PM566 Project: Los Angeles Crime 2020-2021"
+  title: "PM566 Project: Los Angeles Crime"
   type: inverse
   left:
     - text: "Home"
       href: index.html
+    - text: "Additional EDA"
+      href: addteda.html
   right:
     - icon: fa-github fa-lg
       href: https://github.com/USCbiostats/PM566
